2003-08-24  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm: Fixed reading make and model name of the
	  printer from the PPD file to also work with the new Foomatic
	  PPDs ("*ShortNickName" linited to 32 characters and no comma
	  before the driver name).

2003-08-14  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-compiledb.in: Let PPD pre-compilation process not choke
	  on a driver entry with a non-existing printer (for example
	  mistyped) in its list.

2003-08-12  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-combo-xml.c: Pre-initialized pointers in the loadidlist()
	  function (thanks to Gwenole Beauchesne from MandrakeSoft).

2003-08-07  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-configure.in: HPOJ after 0.9 needs two slashes instead
	  of one in CUPS device URIs ("ptal://..."). Let
	  foomatic-configure do the correct thing independent whether the
	  user enters a "ptal" URI with one or two slashes.

2003-08-03  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm, foomatic-ppdfile.in, foomatic-configure.in,
	  USAGE: Added possibility to limit the length of GUI strings
	  ("translations") in the generated PPD files to 39 characters,
	  so that the CUPS PostScript driver for Windows does not choke on
	  them.
	
2003-08-01  Till Kamppeter <till.kamppeter@gmx.net>

	* lib/Foomatic/DB.pm, README: Made it possible to define nested
	  composite options.

2003-07-21  Till Kamppeter <till.kamppeter@gmx.net>

	* README, configure.in, Makefile.in, foomatic-ppdload.in,
	  foomatic-ppdload.8.in: Removed the "foomatic-ppdload" tool as
	  generating XML data from PPD files is not needed any
	  more. "foomatic-rip" works also with manufacturer-supplied
	  PostScript PPDs.
	
	* foomatic-perl-data.c: Let URL of manufacturer PPD also appear
	  in printer/driver combo output.

2003-07-19  Till Kamppeter <till.kamppeter@gmx.net>

	* foomatic-perl-data.c: Fixed output of printer language info.
